# terra_nova

./: .gitignore  LICENSE  README.md  generate_maps.py  project.toml  pyproject.toml  recording_demo.py  requirements.txt  requirements_311.txt  run_viewer.sh  training_demo.py
game/: action_space.py  buildings.py  citystates.py  constants.py  improvements.py  natural_wonders.py  primitives.py  recorder.py  religion.py  resources.py  social_policies.json  social_policies.py  technologies.json  techs.py  termination_fns.py  units.py
learning/: goals.py  memories.py  metrics.py  networks.py  obs_spaces.py
map/: configs.yaml  generate.py
renderer/: DemographicsScreenPixi.js  PerformanceMonitor.js  PolicyScreenRendererPixi.js  ReligionScreenRendererPixi.js  TechTreeRendererPixi.js  TradeScreenRendererPixi.js  VictoryScreenRendererPixi.js  constants.js  index_webgl.html  saved_games_server_webgl.js  webgl_renderer.js
sim/: build.py
utils/: inspect.py  maths.py  misc.py
