
[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terra_nova"
description = "Civilization-style RL environment(s) with Gymnasium-style API and JAX-friendly utilities."
readme = "README.md"
requires-python = ">=3.9.18"
license = "MIT"
authors = [{ name = "Trevor McInroe", email = "trev.mcinroe@gmail.com" }]
version = "0.1.0"

dependencies = [
]

[project.optional-dependencies]
# Let users pick their JAX variant explicitly:
jax_cuda12 = [
  # Example pip wheels; exact extras vary by JAX release
  "jax[cuda12_local]==0.4.30",
]

[tool.setuptools]
# flat layout: discover only the packages you want
packages = { find = { where = ["."],
                      include = ["map*", "sim*", "game*", "renderer*", "learning*", ""],
                      exclude = ["tests*", "run_test*", "fifth_test*", "docs*", "assets*"] } }

# ship non-Python files that live under a package (e.g., assets)
package-data = { "assets" = ["**/*"] }
# If you have data under other packages, add similar lines:
# package-data = { "renderer" = ["shaders/**/*"] }
